add post transactions, test code coverage, improved tests
